# KSkyWizard

./: .gitignore  LICENSE  README.md  environment.yml  setup.cfg  setup.py
kskywizard/: kcwi_viewer.py  kskywizard.py  utils.py
