[metadata]
name = KCWI Sky Wizard
version = 0.0.1dev
author = Zhuyun Zhuang, Yuguang Chen
author_email = 
description = KCRM post DRP telluric correction and sky subtraction
long_description =
license = MIT
url = https://github.com/zhuyunz/KSkyWizard.git
edit_on_github = False
github_project = zhuyunz/KSkyWizard


