[metadata]
name = KCWISkyWizard
version = 0.1dev
author = Zhuyun Zhuang, Yuguang Chen
author_email = zzhuang@astro.caltech.edu
description = KCRM post DRP telluric correction and sky subtraction
license = MIT
url = https://github.com/zhuyunz/KSkyWizard.git
edit_on_github = False
github_project = zhuyunz/KSkyWizard

[telluric]
telgridfile = /scr/zzhuang/telluric/TelFit_MaunaKea_3100_26100_R20000.fits