[metadata]
name = KCWISkyWizard
version = 0.1dev
author = Zhuyun Zhuang, Yuguang Chen
author_email = zzhuang@astro.caltech.edu
description = KCRM post DRP telluric correction and sky subtraction
license = MIT
url = https://github.com/zhuyunz/KSkyWizard.git
edit_on_github = False
github_project = zhuyunz/KSkyWizard

[processing]
telgridfile = path to your telgridfile from pypeit
ncpu = None
